--- a/index.html
+++ b/index.html
@@ -35,22 +35,19 @@
                         <h2 id="temperature"></h2>
                         <h3 class="metric-temp">°C</h3>
 
-                        <div class="row">
-                            <div class="col-12">
-                                <p>
-                                <h4 id="condition"> </h4>
+                        <h4 id="condition"> </h4>
 
-                                <ul>
+                        <ul>
 
-                                    <li id="today"></li>
-                                    <li> Wind: <span id="wind"></span> km/h</li>
-                                    <li> Humidity: <span id="humidity"></span>%</li>
+                            <li id="today"></li>
+                            <li> Wind: <span id="wind"></span> km/h</li>
+                            <li> Humidity: <span id="humidity"></span>%</li>
 
-                                </ul>
-                                </p>
-                            </div>
-                        </div>
+                        </ul>
                     </div>
+
+
+
 
 
                     <div class="col-7">
@@ -60,31 +57,22 @@
 
                     </div>
 
+
+
+
                 </div>
-
-                <div class="row">
-                    <div class="col-2">11° 5° Saturday</div>
-                    <div class="col-2">11° 2° Monday</div>
-                    <div class="col-2">8° 4° Sunday</div>
-                    <div class="col-2">11° 2° Monday</div>
-                    <div class="col-2">10° 1° Tuesday</div>
-                    <div class="col-2">10° 1° Wednesday</div>
-                </div>
-
-
             </div>
         </div>
-    </div>
 
-    <footer>
-        <p>🎨Open <a href="https://github.com/SkippyWalnuts/SheCodes-Week-6" class="gitHub.source.link"
-                id="gitHub-source-link">Source-Code</a> by Rebecca Early👾
-        </p>
-    </footer>
-    <script src="src/index.js">
+        <footer>
+            <p>🎨<a href="https://github.com/SkippyWalnuts/Walnuts-Weather-App" class="gitHub.source.link"
+                    id="gitHub-source-link">Source-Code</a> by Rebecca Early👾
+            </p>
+        </footer>
+        <script src="src/index.js">
 
 
-    </script>
+        </script>
 
 </body>
 
