Added season Undraw images to src & html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </form>
                 <br />
                 <div class="row">
-                    <div class="col-5">
+                    <div class="col-3">
                         <h2 id="temperature"></h2>
                         <h3 class="metric-temp">°C</h3>
 
@@ -46,11 +46,12 @@
                         </ul>
                     </div>
 
+                    <div class="col-3">
+                        <img src="src/images/undraw_spring.svg" class="season-img" width=300
+                            alt="image of the current season">
+                    </div>
 
-
-
-
-                    <div class="col-7">
+                    <div class="col-6">
                         <h1 id="city">
                             London
                         </h1>
