--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                         </ul>
 
                     </div>
-
-                    <span class="material-symbols-rounded cloudy-icon col-md-2">
+                    <span id="icon" class="material-symbols-rounded weather-icon col-md-2">
                         cloudy
+
                     </span>
 
                     <div class="col-md-5">
