--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
                 </form>
 
                 <h1 id="city">
-                    London
                 </h1>
 
                 <div class="row">
                     <div class="col-md-7">
+
                         <h2 id="temperature"></h2>
                         <h3 class="metric-temp">°C</h3>
-                        <h4 id="condition"> </h4>
-
+                        <h4 id="condition"></h4>
+                        <h5 id="today">Saturday 09:23</h5>
                         <ul>
 
-                            <li id="today"></li>
-                            <li> Wind: <span id="wind"></span> km/h</li>
-                            <li> Humidity: <span id="humidity"></span>%</li>
 
+
+                            <li> Humidity: <span id="humidity">94</span>%</li>
+                            <li> Wind: <span id="wind">15</span> km/h</li>
                         </ul>
 
                     </div>
