--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Walnuts Weather</title>
-    <script src="https://kit.fontawesome.com/dbb0023781.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Babylonica&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Noto+Sans+NKo&family=Quicksand:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -46,11 +43,8 @@
                         <h2 id="temperature"></h2>
                         <h3 class="metric-temp">°C</h3>
                         <h4 id="condition"></h4>
-                        <h5 id="today">Saturday 09:23</h5>
+                        <h5>Last updated: <span id="date"></span></h5>
                         <ul>
-
-
-
                             <li> Humidity: <span id="humidity">94</span>%</li>
                             <li> Wind: <span id="wind">15</span> km/h</li>
                         </ul>
