--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
                 </h1>
 
                 <div class="row">
-                    <div class="col-md-7">
-
+                    <div class="col-md-5">
                         <h2 id="temperature"></h2>
                         <h3 class="metric-temp">°C</h3>
-                        <h4 id="condition"></h4>
-                        <h5>Last updated: <span id="date"></span></h5>
+                        <h4 id="description"></h4>
+
                         <ul>
                             <li> Humidity: <span id="humidity">94</span>%</li>
                             <li> Wind: <span id="wind">15</span> km/h</li>
                         </ul>
-
+                        <h5>Last updated: <span id="date"></span></h5>
                     </div>
-
-
+                    <div class="col-md-2">
+                        <img src="" id="icon">
+                    </div>
                     <div class="col-md-5">
                         <img src="src/images/undraw_spring.svg" class="spring-img" height=300 width=400
                             alt="season spring">
