--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <h5>Last updated: <span id="date"></span></h5>
                     </div>
                     <div class="col-md-2">
-                        <img src="" id="icon">
+                        <img src="" id="icon" height="200" width="200">
                     </div>
                     <div class="col-md-5">
                         <img src="src/images/undraw_spring.svg" class="spring-img" height=300 width=400
