--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 <div class="row">
                     <div class="col-md-5">
                         <h2 id="temperature"></h2>
-                        <h3 class="metric-temp">°C</h3>
+                        <h3><a href="#" id="celsius-link">°C</a> | <a href="#" id="fahrenheit-link">°F</a></h3>
+
                         <h4 id="description"></h4>
 
                         <ul>
