Changed CSS of Date to match Season Image Colours

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <li> Humidity: <span id="humidity">94</span>%</li>
                             <li> Wind: <span id="wind">15</span> km/h</li>
                         </ul>
-                        <h5>Last updated: <span id="date"></span></h5>
+                        <h5>Last updated: <span id="date" class="date"></span></h5>
                     </div>
                     <div class="col-md-2">
                         <img src="" id="icon" height="200" width="200">
