--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <img src="" id="icon" height="200" width="200">
                     </div>
                     <div class="col-md-5">
-                        <img src="src/images/undraw_spring.svg" class="spring-img" height=300 width=400
+                        <img src="src/images/undraw_playing_fetch.svg" class="app-image" height=300 width=400
                             alt="season spring">
                     </div>
 
