Re-sized weather app card, images and columns

--- a/index.html
+++ b/index.html
@@ -38,13 +38,16 @@
                 </h1>
 
                 <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-md-12">
                         <h2 id="temperature"></h2>
                         <h3 class="weather-temperature"><a href="#" id="celsius-link" class="active">°C</a> | <a
                                 href="#" id="fahrenheit-link">°F</a></h3>
 
                         <h4 id="description"></h4>
-
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-5">
                         <ul>
                             <li> Humidity: <span id="humidity">94</span>%</li>
                             <li> Wind: <span id="wind">15</span> km/h</li>
@@ -52,14 +55,14 @@
                         <h5>Last updated: <span id="date" class="date"></span></h5>
                     </div>
                     <div class="col-md-2">
-                        <img src="" id="icon" height="200" width="200">
+                        <img src="" id="icon" height="150" width="150">
                     </div>
                     <div class="col-md-5">
-                        <img src="src/images/undraw_playing_fetch.svg" class="app-image" height=300 width=400
+                        <img src="src/images/undraw_playing_fetch.svg" class="app-image" height=200 width=300
                             alt="season spring">
                     </div>
-
                 </div>
+
 
             </div>
         </div>
