--- a/index.html
+++ b/index.html
@@ -38,16 +38,12 @@
                 </h1>
 
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-5">
                         <h2 id="temperature"></h2>
                         <h3 class="weather-temperature"><a href="#" id="celsius-link" class="active">°C</a> | <a
                                 href="#" id="fahrenheit-link">°F</a></h3>
 
                         <h4 id="description"></h4>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-5">
                         <ul>
                             <li> Humidity: <span id="humidity">94</span>%</li>
                             <li> Wind: <span id="wind">15</span> km/h</li>
@@ -62,6 +58,32 @@
                             alt="season spring">
                     </div>
                 </div>
+
+                <div class="row forecast">
+                    <div class="col-md-2">
+                        Mon
+                    </div>
+                    <div class="col-md-2">
+                        Tues
+                    </div>
+                    <div class="col-md-2">
+                        Weds
+                    </div>
+                    <div class="col-md-2">
+                        Thurs
+                    </div>
+                    <div class="col-md-2">
+                        Fri
+                    </div>
+                    <div class="col-md-2">
+                        Sat
+                    </div>
+
+                </div>
+
+
+
+
 
 
             </div>
