Added forecast HTML to JS and added days array and loop

--- a/index.html
+++ b/index.html
@@ -59,60 +59,9 @@
                     </div>
                 </div>
 
-                <div class="row forecast">
-                    <div class="col-md-2">
-                        Mon
-                        <div class="row">
-                            <span class="col-md-6 forecast-icon" id="day-one-icon">☀</span>
-                            <span class="col-md-6 forecast-temperature" id="day-one-temperature">🌡</span>
-                        </div>
-                    </div>
+                <div class="forecast" id="forecast">
 
-                    <div class="col-md-2">
-                        Tues
-                        <div class="row">
-                            <span class="col-md-6 forecast-icon" id="day-two-icon">☀</span>
-                            <span class="col-md-6 forecast-temperature" id="day-two-temperature">🌡</span>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        Weds
-                        <div class="row">
-                            <span class="col-md-6 forecast-icon" id="day-three-icon">☀</span>
-                            <span class="col-md-6 forecast-temperature" id="day-three-temperature">🌡</span>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        Thurs
-                        <div class="row">
-                            <span class="col-md-6 forecast-icon" id="day-four-icon">☀</span>
-                            <span class="col-md-6 forecast-temperature" id="day-four-temperature">🌡</span>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        Fri
-                        <div class="row">
-                            <span class="col-md-6 forecast-icon" id="day-five-icon">☀</span>
-                            <span class="col-md-6 forecast-temperature" id="day-five-temperature">🌡</span>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        Sat
-                        <div class="row">
-                            <span class="col-md-6 forecast-icon" id="day-six-icon">☀</span>
-                            <span class="col-md-6 forecast-temperature" id="day-six-temperature">🌡</span>
-                        </div>
-
-                    </div>
                 </div>
-
-
-
-
-
-
-
-
 
             </div>
         </div>
