Removed unit converter functions and Fahrenheit

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                     <div class="row">
                         <div class="col-md-5">
                             <h2 id="temperature"></h2>
-                            <h3 class="weather-temperature"><a href="#" id="celsius-link" class="active">°C</a> | <a
-                                    href="#" id="fahrenheit-link">°F</a></h3>
+                            <h3 class="weather-temperature">°C</h3>
 
                             <h4 id="description"></h4>
                             <ul>
