--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                             <h5>Last updated: <span id="date" class="date"></span></h5>
                         </div>
                         <div class="col-md-2 weather-icon">
-                            <img src="" id="icon" height=150 width=150>
+                            <img src="" id="icon">
                         </div>
                         <div class="col-md-5">
-                            <img src="src/images/undraw_playing_fetch.svg" class="app-image" height=250 width=350
+                            <img src="src/images/undraw_playing_fetch.svg" class="app-image" height=200 width=260
                                 alt="season spring">
                         </div>
                     </div>
