--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Walnuts Weather</title>
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Babylonica&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Noto+Sans+NKo&family=Quicksand:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <title>Walnuts Weather</title>
 </head>
 
 <body>
@@ -25,11 +26,11 @@
                 <div class="card-body">
                     <form class="search-form" id="search-form">
                         <div class="row">
-                            <div class="col-md-9">
+                            <div class="col-9">
                                 <input type="search" placeholder="Where to next?" autofocus="on" autocomplete="off"
                                     id="city-input" class="form-control shadow-sm" />
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-3">
                                 <input type="submit" value="Search" class="form-control btn btn-primary shadow-sm" />
                             </div>
                         </div>
@@ -39,7 +40,7 @@
                     </h1>
 
                     <div class="row">
-                        <div class="col-md-5">
+                        <div class="col-5">
                             <h2 id="temperature"></h2>
                             <h3 class="weather-temperature">°C</h3>
 
@@ -50,11 +51,11 @@
                             </ul>
                             <h5>Last updated: <span id="date" class="date"></span></h5>
                         </div>
-                        <div class="col-md-2 weather-icon">
-                            <img src="" id="icon">
+                        <div class="col-2 weather-icon">
+                            <img src="" id="icon" height=150 width=150>
                         </div>
-                        <div class="col-md-5">
-                            <img src="src/images/undraw_playing_fetch.svg" class="app-image" height=200 width=260
+                        <div class="col-5">
+                            <img src="src/images/undraw_playing_fetch.svg" class="app-image" height=210 width=300
                                 alt="season spring">
                         </div>
                     </div>
