Tidied image folder and re-sized app

--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
                             <h5>Last updated: <span id="date" class="date"></span></h5>
                         </div>
                         <div class="col-2 weather-icon">
-                            <img src="" id="icon" height=150 width=150>
+                            <img src="" id="icon" height=115 width=115>
                         </div>
                         <div class="col-5">
-                            <img src="src/images/undraw_playing_fetch.svg" class="app-image" height=210 width=300
-                                alt="season spring">
+                            <img src="" id="season-image" height=210 width=240 alt="season spring">
                         </div>
                     </div>
 
