Re-added season image source

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                             <img src="" id="icon" height=115 width=115>
                         </div>
                         <div class="col-5">
-                            <img src="" id="season-image" height=210 width=240 alt="season spring">
+                            <img src="src/images/undraw_spring.svg" id="season-image" height=210 width=240
+                                alt="season spring">
                         </div>
                     </div>
 
