Moved weather-app class into container-fluid

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="weather-app">
+    <div class="container-fluid weather-app">
+        
             <div class="card">
                 <div class="card-body">
                     <form class="search-form" id="search-form">
@@ -73,8 +73,7 @@
                 </p>
             </footer>
 
-        </div>
-    </div>
+         </div>
     <script src="src/index.js"></script>
 </body>
 
