Made image responsive and updated @media card and app sizing

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                             <img src="" id="icon" height=115 width=115>
                         </div>
                         <div class="col-5">
-                            <img src="src/images/undraw_spring.svg" id="season-image" height=210 width=240
+                            <img src="src/images/undraw_spring.svg" 
+                            class="season-image img-fluid"
+                            id="season-image"
                                 alt="season spring">
                         </div>
                     </div>
